--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,7 +10,7 @@ services:
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
-      POSTGRES_DB: flask-db 
+      POSTGRES_DB: task-db 
     
     volumes:
       - flask_data:/var/lib/postgresql
